--- a/frontend/src/CSS/LoginSignup.css
+++ b/frontend/src/CSS/LoginSignup.css
@@ -5,6 +5,28 @@
 padding-top: 100px;
 padding-bottom: 50px;
 }
+@media (max-width: 900px) {
+    .loginsignup-container {
+        width: 90%;
+        height: auto;
+        padding: 20px 10px;
+    }
+}
+@media (max-width: 600px) {
+    .loginsignup {
+        padding-top: 50px;
+        padding-bottom: 20px;
+    }
+    .loginsignup-container {
+        width: 100%;
+        height: auto;
+        padding: 10px 5px;
+    }
+    .loginsignup-fields input {
+        height: 40px;
+        font-size: 16px;
+    }
+}
    
 
 .loginsignup-container{
