--- a/frontend/src/component/popular/Popular.css
+++ b/frontend/src/component/popular/Popular.css
@@ -20,3 +20,21 @@ background: #252525;
     margin-top: 50px;
     display: flex;
     }
+@media (max-width: 900px) {
+  .popular-item {
+    flex-direction: column;
+    gap: 15px;
+  }
+  .popular h1 {
+    font-size: 24px;
+  }
+}
+@media (max-width: 600px) {
+  .popular-item {
+    flex-direction: column;
+    gap: 10px;
+  }
+  .popular h1 {
+    font-size: 16px;
+  }
+}
