--- a/frontend/src/component/productDisplay/ProductDisplay.css
+++ b/frontend/src/component/productDisplay/ProductDisplay.css
@@ -3,6 +3,32 @@
     margin: 0px 70px;
     
 }
+@media (max-width: 900px) {
+    .productdisplay {
+        flex-direction: column;
+        margin: 0px 10px;
+    }
+    .productdisplay-main-img {
+        width: 100%;
+        height: 400px;
+    }
+    .productdisplay-right {
+        margin: 0px;
+    }
+}
+@media (max-width: 600px) {
+    .productdisplay {
+        flex-direction: column;
+        margin: 0px 2px;
+    }
+    .productdisplay-main-img {
+        width: 100%;
+        height: 250px;
+    }
+    .productdisplay-right {
+        margin: 0px;
+    }
+}
 .productdisplay-left{
     display: flex;
     gap: 17px;
