--- a/frontend/src/component/CartItems/Cartitems.css
+++ b/frontend/src/component/CartItems/Cartitems.css
@@ -1,32 +1,8 @@
 
-.cartitems{
+ .cartitems{
     margin: 50px 70px;
 }
-@media (max-width: 900px) {
-    .cartitems {
-        margin: 20px 10px;
-    }
-    .cartitems-format-main {
-        grid-template-columns: 1fr 1fr 1fr;
-        font-size: 14px;
-        gap: 10px;
-    }
-}
-@media (max-width: 600px) {
-    .cartitems {
-        margin: 5px 2px;
-    }
-    .cartitems-format-main {
-        grid-template-columns: 1fr;
-        font-size: 12px;
-        gap: 5px;
-    }
-}
-.cartitems hr{
-    height: 3px;
-    background: #e2e2e2;
-    border: 0;
-}
+
 .cartitems-format-main{
     display: grid;
     grid-template-columns: 0.5fr 2fr 1fr 1fr 1fr 1fr;
@@ -37,33 +13,46 @@
     font-size: 18px;
     font-weight: 600;
 }
+
 .cartitems-format{
     font-size: 15px;
     font-weight: 500;
 }
+
+.cartitems hr{
+    height: 3px;
+    background: #e2e2e2;
+    border: 0;
+}
+
 .carticon-product-icon{
     height: 50px;
 }
+
 .cartitems-remove-icon{
     width: 15px;
     margin: 0px 30px;
     cursor: pointer;
 }
+
 .cartitems-quantity{
-height: 40px;
-width: 100px;
+    height: 40px;
+    width: 100px;
 }
+
 .cartitems-down{
     display: flex;
     margin: 70px 0px;
+    gap: 40px;
 }
+
 .cartitems-total{
     flex: 1;
     display: flex;
     flex-direction: column;
-    margin-right: 200px;
     gap: 30px;
 }
+
 .cartitems-total-item{
     display: flex;
     justify-content: space-between;
@@ -73,7 +62,6 @@ width: 100px;
 .cartitems-total button{
     width: 250px;
     height: 50px;
-    outline: none;
     border: none;
     background: #ff5a5a;
     color: #fff;
@@ -81,89 +69,103 @@ width: 100px;
     font-weight: 600;
     cursor: pointer;
 }
+
 .cartitems-promocode{
     flex: 1;
     font-size: 16px;
     font-weight: 500;
+}
 
-}
-.cartitems-promocode p{
-    color: #555;
-}
 .cartitems-promobox{
-    width: 300px;
+    width: 100%;
+    max-width: 400px;
     margin-top: 15px;
-    padding-left: 20px;
     height: 50px;
     background: #eaeaea;
+    display: flex;
 }
+
 .cartitems-promobox input{
     border: none;
     outline: none;
     background: transparent;
     font-size: 16px;
-    width: 300px;
-    height: 50px;
+    flex: 1;
+    padding-left: 15px;
 }
 
 .cartitems-promobox button{
-    width: 150px;
-    height: 50px;
-    font-size: 16px;
+    width: 120px;
     background: black;
     color: white;
     cursor: pointer;
 }
 
-/* Responsive styles for phone screens */
-@media (max-width: 480px) {
-    .cartitems {
-        margin: 2px 1px;
+
+@media (max-width: 900px){
+
+    .cartitems{
+        margin: 20px 10px;
     }
-    .cartitems-format-main {
-        grid-template-columns: 1fr;
-        font-size: 10px;
-        gap: 3px;
-        padding: 5px 0px;
-    }
-    .carticon-product-icon {
-        height: 35px;
-    }
-    .cartitems-remove-icon {
-        width: 12px;
-        margin: 0px 10px;
-    }
-    .cartitems-quantity {
-        height: 30px;
-        width: 60px;
-    }
-    .cartitems-down {
-        flex-direction: column;
-        margin: 20px 0px;
-    }
-    .cartitems-total {
-        margin-right: 0px;
+
+    .cartitems-format-main{
+        grid-template-columns: 1fr 2fr 1fr;
+        font-size: 14px;
         gap: 10px;
-        width: 100%;
     }
-    .cartitems-total button {
-        width: 100%;
-        height: 40px;
-        font-size: 14px;
+
+    .cartitems-down{
+        flex-direction: column;
+        gap: 30px;
     }
-    .cartitems-promobox {
+
+    .cartitems-total button{
         width: 100%;
-        padding-left: 10px;
-        height: 40px;
-    }
-    .cartitems-promobox input {
-        font-size: 14px;
-        width: 100%;
-        height: 40px;
-    }
-    .cartitems-promobox button {
-        width: 100%;
-        height: 40px;
-        font-size: 14px;
     }
 }
+
+@media (max-width: 600px){
+
+    .cartitems{
+        margin: 10px 5px;
+    }
+
+    .cartitems-format-main{
+        grid-template-columns: 1fr;
+        text-align: center;
+        font-size: 13px;
+        gap: 8px;
+    }
+
+    .carticon-product-icon{
+        margin: auto;
+    }
+
+    .cartitems-remove-icon{
+        margin: auto;
+    }
+
+    .cartitems-quantity{
+        width: 100%;
+    }
+
+    .cartitems-total button{
+        width: 100%;
+        font-size: 14px;
+    }
+
+    .cartitems-promobox{
+        flex-direction: column;
+        height: auto;
+    }
+
+    .cartitems-promobox input{
+        height: 45px;
+    }
+
+    .cartitems-promobox button{
+        width: 100%;
+        height: 45px;
+    }
+}
+
