--- a/frontend/src/component/newsletter/Newsletter.css
+++ b/frontend/src/component/newsletter/Newsletter.css
@@ -1,83 +1,47 @@
-.newsletter{
-    width: 100%px;
-    height: 100vh;
+.newsletter {
+    width: 100%;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     margin: auto;
-    padding: 0px 140px;
+    padding: 40px 10%;
     margin-bottom: 150px;
-    background-color:180deg  aliceblue;
-    gap:  30px;
-}
-@media (max-width: 900px) {
-    .newsletter {
-        padding: 0px 10px;
-        margin-bottom: 50px;
-        height: auto;
-    }
-    .newsletter p {
-        font-size: 24px;
-    }
-    .newsletter div {
-        width: 100%;
-        border-radius: 40px;
-    }
-    .newsletter input {
-        width: 100%;
-        font-size: 14px;
-    }
-}
-@media (max-width: 600px) {
-    .newsletter {
-        padding: 0px 2px;
-        margin-bottom: 20px;
-        height: auto;
-    }
-    .newsletter p {
-        font-size: 16px;
-    }
-    .newsletter div {
-        width: 100%;
-        border-radius: 20px;
-    }
-    .newsletter input {
-        width: 100%;
-        font-size: 12px;
-    }
-}
-.newsletter p{
+    background: linear-gradient(180deg, aliceblue, white);
+    gap: 30px;
+    text-align: center;}
+
+.newsletter p {
     color: #454545;
     font-size: 55px;
     font-weight: 600;
-
 }
 .newsletter div {
     display: flex;
     align-items: center;
     justify-content: space-between;
     background: white;
-    width: 700px;
+    width: 100%;
+    max-width: 700px;
     border-radius: 80px;
     border: 1px solid #3e3e3e;
-
+    overflow: hidden;
 }
-.newsletter input{
-    width: 500px;
-    height: 50px;
-    margin-left: 30px;
+
+.newsletter input {
+    flex: 1;
+    height: 55px;
+    padding-left: 20px;
     border: none;
     outline: none;
-    color: #616161;
     font-size: 16px;
+}
 
-}
-.newsletter div button{
-width: 200px;
-height:50px ;
-background: black;
-color: antiquewhite;
-font-size: 16px;
-border-radius: 80px;
-}
+.newsletter div button {
+    width: 180px;
+    height: 55px;
+    background: black;
+    color: antiquewhite;
+    font-size: 16px;
+    border:
