--- a/frontend/src/CSS/LoginSignup.css
+++ b/frontend/src/CSS/LoginSignup.css
@@ -1,97 +1,64 @@
-.loginsignup{
-    height: vh;
-    width: 100%;
-     background: linear-gradient(180deg,#c2b3c2,#06a13422 60% );
-padding-top: 100px;
-padding-bottom: 50px;
-}
-@media (max-width: 900px) {
-    .loginsignup-container {
-        width: 90%;
-        height: auto;
-        padding: 20px 10px;
-    }
-}
-@media (max-width: 600px) {
-    .loginsignup {
-        padding-top: 50px;
-        padding-bottom: 20px;
-    }
-    .loginsignup-container {
-        width: 100%;
-        height: auto;
-        padding: 10px 5px;
-    }
-    .loginsignup-fields input {
-        height: 40px;
-        font-size: 16px;
-    }
-}
-   
-
-.loginsignup-container{
-    width: 550px;
-    height: 600px;
-    background: white;
-    margin:auto;
-    padding:40px 60px;
-}
 .loginsignup-container h1 {
-    margin: 20px 0px;
+    margin: 20px 0;
+    text-align: center;
+}
 
-}
-.loginsignup-fields{
+.loginsignup-fields {
     display: flex;
-   flex-direction: column;
-    gap: 30px;
+    flex-direction: column;
+    gap: 20px;
     margin-top: 30px;
-    border: 1px solid #c9c9c9;
-    
- 
 }
-.loginsignup-fields input{
+
+.loginsignup-fields input {
     height: 50px;
     width: 100%;
     padding-left: 20px;
     outline: none;
-    color: #5c5c5c;
-    font-size: 18px;
-    font-weight: 500;
-
-
-
+    border: 1px solid #c9c9c9;
+    font-size: 16px;
 }
-.loginsignup-login{
-    margin-top: 20px;
-    color:  #5c5c5c;
-    font-size: 18px;
-    font-weight: 500;
-}
-.loginsignup-login span{
-    color: #ff4141;
-    font-weight: 600;
-
-}
-.loginsignup-agree{
-    display: flex;
-    align-items: center;
-    margin-top: 25px;
-    gap: 20px;
-    color: #5c5c5c;
-    font-size: 18px;
-    font-weight: 500;
-
-} 
-.loginsignup-container button{
-    width: 400px;
-    height: 40px;
+.loginsignup-container button {
+    width: 100%;
+    height: 45px;
     color: white;
     background: #ff4141;
     margin-top: 25px;
-    font-size: 20px;
-    font-weight: 500;
+    font-size: 18px;
     border: none;
     cursor: pointer;
-    margin-left: 15px;
+    border-radius: 4px;
+}
+.loginsignup-login,
+.loginsignup-agree {
+    font-size: 16px;
+    margin-top: 20px;
+}
+.loginsignup-login span {
+    color: #ff4141;
+    font-weight: 600;
+}
+@media (max-width: 900px) {
+    .loginsignup-container {
+        padding: 30px 25px;
+    }
+}
+@media (max-width: 600px) {
+    .loginsignup {
+        padding: 60px 15px 30px;
+    }
 
+    .loginsignup-container {
+        padding: 25px 15px;
+    }
+
+    .loginsignup-fields input {
+        height: 45px;
+        font-size: 14px;
+    }
+
+    .loginsignup-container button {
+        font-size: 16px;
+        height: 42px;
+    }
 }
