--- a/frontend/src/component/navbar/Navbar.css
+++ b/frontend/src/component/navbar/Navbar.css
@@ -1,113 +1,134 @@
 .navbar{
     display: flex;
-    justify-content: space-around;
-    padding: 16px;
+    justify-content: space-between;
+    align-items: center;
+    padding: 16px 40px;
     box-shadow: 0 1px 3px -2px black;
+    flex-wrap: wrap;
 }
-@media (max-width: 900px) {
-    .navbar {
-        flex-direction: row;
-        padding: 10px;
-    }
-    .nav-menu {
-        gap: 5px;
-    }
-}
-@media (max-width: 320px) {
-    .navbar {
-        flex-direction: row;
-        padding: 5px;
-    }
-    .nav-logo p {
-        font-size: 16px;
-    }
-    .nav-menu {
-        gap:1px;
-        flex-direction: row;
-    }
-    .nav-menu li {
-        font-size: 5px;
-        flex-direction: row;
-        gap: 1px;
 
-    }
-    .nav-login-cart {
-        gap: 1px;
-    }
-   .nav-menu hr {
-        width: 100%;
-        height: auto;
-    }
-}
+
 .nav-logo{
     display: flex;
     gap: 5px;
     align-items: center;
-
 }
 .nav-logo p{
     color: black;
     font-size: 20px;
     font-weight: 600;
-
-
 }
+
+
 .nav-menu{
     display: flex;
-    gap: 50px;
+    gap: 40px;
     align-items: center;
-    transition: right 0.3s;
+    list-style: none;
 }
+
 .nav-menu li{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    gap: 3px;
     cursor: pointer;
-    transition: font-size 0.3s;
-
 }
+
 .nav-menu hr{
     border: none;
-    width: 80px;
+    width: 80%;
     height: 3px;
     border-radius: 18px;
     background-color: #ff4141;
-
 }
+
 
 .nav-login-cart{
-  display: flex;
-  align-items: center;
-    gap: 40px;
-
-
-
-
+    display: flex;
+    align-items: center;
+    gap: 25px;
 }
+
 .nav-login-cart button{
     width: 100px;
     height: 40px;
-    outline: none;
     border: 1px solid #7a7a7a;
     border-radius: 75px;
-    color: #515151;
     font-size: 16px;
-    font-weight: 500;
 }
+
 .nav-cart-count{
     width: 22px;
     height: 22px;
-    align-items: center;
     display: flex;
     justify-content: center;
+    align-items: center;
     margin-top: -30px;
     margin-left: -50px;
     border-radius:20px;
     font-size: 14px;
     background-color: red;
     color: white;
+}
+@media (max-width: 900px) {
+
+    .navbar{
+        padding: 12px 20px;
+    }
+
+    .nav-menu{
+        gap: 20px;
+    }
+
+    .nav-login-cart{
+        gap: 15px;
+    }
+}
+
+@media (max-width: 600px) {
+
+    .navbar{
+        flex-direction: column;
+        gap: 15px;
+        padding: 10px;
+    }
+
+    .nav-menu{
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 15px;
+    }
+
+    .nav-menu li{
+        font-size: 14px;
+    }
+
+    .nav-login-cart{
+        gap: 10px;
+    }
+
+    .nav-login-cart button{
+        width: 80px;
+        height: 35px;
+        font-size: 14px;
+    }
 
 }
-    
+
+
+@media (max-width: 400px) {
+
+    .nav-logo p{
+        font-size: 16px;
+    }
+
+    .nav-menu li{
+        font-size: 12px;
+    }
+
+    .nav-login-cart button{
+        width: 70px;
+        height: 30px;
+        font-size: 12px;
+    }
+}
